fix chip and text alignment

--- a/packages/coffee.chealt.com/src/components/coffees/item.css
+++ b/packages/coffee.chealt.com/src/components/coffees/item.css
@@ -22,6 +22,7 @@
 }
 
 .chip + span {
+  margin-bottom: var(--gap--s);
   margin-right: var(--gap--s);
 }
 
